
VERSION 0.7.1cvs
================

2005-06-21  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed compilation errors with g++ 4.0.

2005-06-13  Vincent Richard  <vincent@vincent-richard.net>

 * word.cpp: fixed a bug in parsing, when the first character of word data
   was encoded in QP (thanks to Wolf Jiang).

2005-06-03  Vincent Richard  <vincent@vincent-richard.net>

 * parameterizedHeaderField.{hpp|cpp}: fixed a memory leak in the
   destructor (thanks to Rafael Fernandez).

2005-05-27  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/*/*Message.{hpp|cpp}: added a 'peek' parameter to extract
   message contents without marking the message as seen.

2005-05-19  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/imap/IMAPFolder.cpp: fixed bug in subfolders enumeration.

 * examples/example6.cpp: enhanced 'example6' into an interactive program to
   show some of the features of the messaging module.

2005-05-15  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/serviceInfos.{hpp|cpp}: changed getAvailableProperties() to
   return 'serviceInfos::property' objects instead of strings. This permits
   setting service properties in a more generic manner.

2005-05-03  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/imap/IMAPFolder.cpp: fixed missing space in "STATUS" command +
   parsing error in 'status_info'.

2005-04-30  Vincent Richard  <vincent@vincent-richard.net>

 * utility/childProcess.{hpp|cpp}: added a 'childProcess' class to help
   with spawning child processes (used in 'sendmail' implementation).

2005-04-28  Stefan Uhrig  <stefanuhrig@gmx.net>

 * README.msvc: added guide describing how to compile VMime using
   Visual Studio .NET 2003

2005-04-27  Vincent Richard  <vincent@vincent-richard.net>

 * progressionListener.{hpp|cpp}: moved to 'vmime::utility' package since
   this can be of general use.

 * stream.{hpp|cpp}: added a bufferedStreamCopy() function which can